# bearclaw

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md
.claude/skills/bear/: SKILL.md
.claude/skills/bear/scripts/: ensure-installed.sh
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/api/: mod.rs
src/cli/: args.rs
src/commands/: batch.rs  export.rs  mod.rs  note.rs  stats.rs  tag.rs
src/db/: mod.rs  notes.rs  stats.rs  tags.rs
src/models/: mod.rs
src/output/: mod.rs
